# TurboHiker

./: .clang-format  .gitignore  CMakeLists.txt  HelperDataTypes.h  README.md  TurboHiker.cpp  TurboHiker.h  doxygen  main.cpp  run.sh
.github/workflows/: c-cpp.yml
Controller/: Controller.cpp  Controller.h
Model/: Background.cpp  Background.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  EntityMaker.cpp  EntityMaker.h  Finish.cpp  Finish.h  MainCharacter.cpp  MainCharacter.h  Model.cpp  Model.h  SimpleAI.cpp  SimpleAI.h  StaticHiker.cpp  StaticHiker.h
Model/EnemyHikers/: Enemy.cpp  Enemy.h  LeftToRightHiker.cpp  LeftToRightHiker.h  StaticHiker.cpp  StaticHiker.h
Model/EntityFactory/: EntityMaker.cpp  EntityMaker.h
Model/PowerUps/: InvincibilityStar.cpp  InvincibilityStar.h  LaserBeam.cpp  LaserBeam.h  Nuke.cpp  Nuke.h  PowerUp.cpp  PowerUp.h  SpeedUp.cpp  SpeedUp.h  SummonEnemy.cpp  SummonEnemy.h
Observers/: LiveScoring.cpp  LiveScoring.h
Singletons/: Random.cpp  Random.h  Timer.cpp  Timer.h  Transformation.cpp  Transformation.h
UserInterface/: UserInterface.cpp  UserInterface.h
View/: View.cpp  View.h
assets/: Highscore.txt
cmake_modules/: FindSFML.cmake
html/: Discarded_8h_source.html  HelperDataTypes_8h_source.html  TurboHiker_8h_source.html  _background_8h_source.html  _controller_8h_source.html  _discarded_8h_source.html  _enemy_8h_source.html  _entity_8h_source.html  _entity_maker_8h_source.html  _helper_data_types_8h_source.html  _main_character_8h_source.html  _model_8h_source.html  _random_8h_source.html  _static_hiker_8h_source.html  _transformation_8h_source.html  _turbo_hiker_8h_source.html  _view_8h_source.html  annotated.html  classTurboHiker-members.html  classTurboHiker.html  class_background-members.html  class_background.html  class_controller-members.html  class_controller.html  class_enemy-members.html  class_enemy.html  class_entity-members.html  class_entity.html  class_entity_maker-members.html  class_entity_maker.html  class_main_character-members.html  class_main_character.html  class_model-members.html  class_model.html  class_random-members.html  class_random.html  class_static_hiker-members.html  class_static_hiker.html  class_turbo_hiker-members.html  class_turbo_hiker.html  (+40 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js
latex/: annotated.tex  classTurboHiker.tex  class_background.eps  class_background.tex  class_controller.tex  class_enemy.eps  class_enemy.tex  class_entity.eps  class_entity.tex  class_entity_maker.tex  class_main_character.eps  class_main_character.tex  class_model.tex  class_random.tex  class_static_hiker.eps  class_static_hiker.tex  class_turbo_hiker.tex  class_view.tex  classsingleton_1_1_transformation.tex  dir_2254ed4c86842eb07fcb8e0eac2ef2c8.tex  dir_247c9eba0c420962286e8bd2a154537b.tex  dir_312950da3f243a51cc00f4a947545131.tex  dir_3c9f3ed66bc349525b536302ffbe5a4f.tex  dir_7f421ba36466b38d06d5c40c0e3f34f2.tex  dir_cb8aebdcbcd7898634ff25bad2892a2f.tex  dir_f2ee84e8e3a17eaa7015d788fa443c27.tex  hierarchy.tex  refman.tex  structDimentions.tex  structGlobalBounds.tex  structGlobalBounds__coll__graph.md5  structMove.tex  structPosition.tex  struct_dimentions.tex  struct_global_bounds.tex  struct_move.tex  struct_position.tex
